<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>amr_v4_station</name>
    <version>0.0.0</version>
    <description>ROS 2 package for AMR station control</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <buildtool_depend>rclpy</buildtool_depend>
    <buildtool_depend>std_msgs</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>Jetson.GPIO</exec_depend>
    <exec_depend>tkinter</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
